--- a/Dateadd_OlderStuff/Views/Food/Index.cshtml
+++ b/Dateadd_OlderStuff/Views/Food/Index.cshtml
@@ -4,39 +4,53 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@* <script src="~/js/ViewFjs.js"></script> *@
 <h1>Index</h1>
-
 <h4>Food</h4>
 <hr />
+
+<!-- Error message container -->
+<div id="errorMessage" class="alert alert-danger" style="display: none;"></div>
+
 @using (Html.BeginForm("Edit", "Food", FormMethod.Post))
 {
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Index">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Created" class="control-label"></label>
-                    <input asp-for="Created" class="form-control" />
-                    <span asp-validation-for="Created" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Calories" class="control-label"></label>
-                    <input asp-for="Calories" class="form-control" />
-                    <span asp-validation-for="Calories" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <!-- DDL Dropdown for Meal -->
+            <div class="form-group">
+                <label asp-for="Meal" class="control-label">Food Type</label>
+                <select asp-for="Meal" asp-items="Model.MealOptions" class="form-control">
+                    <option value="">-- Select Food Type --</option>
+                </select>
+                <span class="text-danger" asp-validation-for="Meal"></span>
+            </div>
+            <!-- Description -->
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <!-- Created -->
+            <div class="form-group">
+                <label asp-for="Created" class="control-label"></label>
+                <input asp-for="Created" class="form-control" />
+                <span asp-validation-for="Created" class="text-danger"></span>
+            </div>
+            <!-- Calories -->
+            <div class="form-group">
+                <label asp-for="Calories" class="control-label"></label>
+                <input asp-for="Calories" class="form-control" />
+                <span asp-validation-for="Calories" class="text-danger"></span>
+            </div>
+            <!-- Submit Button -->
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
+            </div>
         </div>
     </div>
 }
+
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
